--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^6.7.0",
-    "mongoose": "^6.13.0"
+    "mongoose": "^6.0.13"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
